--- a/index.html
+++ b/index.html
@@ -17,17 +17,21 @@
           <div class="col-xs-12 col-md-4 col-md-push-4">
 
             <div class="chat-bubble left">
+              <img src="images/user1.png" class="avatar l">
               Hi Frank. How are you?
             </div>
             <div class="chat-bubble right">
+              <img src="images/user2.png" class="avatar r">
               I'm Fine, and you?.
               <br>
               <img src="images/infographbc1.png">
             </div>
             <div class="chat-bubble left">
+              <img src="images/user1.png" class="avatar l">
               I'm Fine too!
             </div>
             <div class="chat-bubble right">
+              <img src="images/user2.png" class="avatar r">
               Great! &#128077;
             </div>
 
